<resources>
    <string name="app_name">CostTrackerApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="about_application">About application</string>
    <string name="add_expense">Add expense</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="view">View</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="add_a_new_expense">Add a new expense</string>
    <string name="save_changes">Save changes</string>
    <string name="edit_expense">Edit expense</string>
    <string name="filters">Filters</string>
    <string name="search_for_expense">Search for expense</string>
    <string name="clear">Clear</string>
    <string name="monthly_limit">Monthly limit</string>
</resources>