<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_navigation"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.costtrackerapplication.ui.login.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.costtrackerapplication.ui.login.about.AboutFragment"
        android:label="@string/about_application"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="SettingsFragment"
        android:label="@string/settings" />
</navigation>