<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.register.RegisterFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/registerAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:windowBackground"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register_fragment"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/sign_up"
            app:navigationIcon="@drawable/ic_round_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Create an account"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Create free account using valid email"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_register_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_re_password_layout"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_username_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_subtitle"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_layout"
        app:startIconDrawable="@drawable/ic_outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_re_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username_layout"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_re_password_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/re_enter_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_layout"
        app:startIconDrawable="@drawable/ic_outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>