<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.login.LoginFragment"
    android:layout_margin="32dp">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Welcome to CostTracker"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="28dp"
        app:layout_constraintBottom_toTopOf="@+id/login_email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        android:text="Log in with account to proceed"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/login_email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintVertical_bias="0.666" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="80dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_layout"
        app:startIconDrawable="@drawable/ic_outline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <TextView
        android:id="@+id/text_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign up!"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_forgot_passwd"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/text_forgot_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Forgot password?"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_login" />

    <TextView
        android:id="@+id/text_sign_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or sign in with Google"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_to_register"
        app:layout_constraintVertical_bias="0.72" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_to_register"
        app:layout_constraintVertical_bias="0.571" />


</androidx.constraintlayout.widget.ConstraintLayout>